# cluster-chat-server

./: .gitignore  .gitmodules  Autobuild.sh  CMakeLists.txt  README.md  nginx.conf
Client/: CMakeLists.txt  ClientNet.cpp  main.cpp
Server/: CMakeLists.txt  ChatServer.cpp  ChatServer.h  main.cpp  mysql.ini  mysql.sql
Server/db/: Connection.cpp  ConnectionPool.cpp  ConnectionPool.h
Server/model/: frienddao.cpp  group.h  groupuser.h  offlinemsgdao.cpp  offlinemsgdao.h  user.h  userdao.cpp
docs/: protocol.md  业务清单.md  协议.md  安装环境.md
src/: public.h
src/Client/: ClientNet.h  client
src/Server/:  ChatService.cpp   ChatService.h  CMakeLists.txt  ChatServer.cpp  ChatServer.h  main.cpp  mysql.ini  server
src/Server/db/: ConnectionPool.cpp
src/Server/model/: frienddao.h  groupuser.h  userdao.cpp  userdao.h
src/client/: CMakeLists.txt  callbacks.h  client  clientNet.cpp  clientNet.h  clientService.cpp  clientService.h  clientconf.ini  main.cpp  parseMessage.cpp  parseMessage.h  showUI.cpp  showUI.h  token.cpp  token.h
src/common/: config.cpp  config.h
src/server/: CMakeLists.txt  chatserver.cpp  chatserver.h  chatservice.cpp  chatservice.h  main.cpp  mysql.ini  redis.ini  relationCache.cpp  relationCache.h  server  serverconf.ini  tokenManager.cpp  tokenManager.h
src/server/db/: DbChecker.cpp  DbChecker.h  DbConfig.cpp  DbConfig.h  connection.cpp  connection.h  connectionPool.cpp  connectionPool.h
src/server/model/: frienddao.cpp  frienddao.h  group.h  groupdao.cpp  groupdao.h  offlinemsgdao.cpp  user.h  userdao.cpp  userdao.h
src/server/redis/: redisTool.cpp  redisTool.h  test.cpp
src/server/services/: authService.cpp  authService.h  baseservice.cpp  baseservice.h  callBacks.h  friendService.cpp  friendService.h  groupService.cpp  groupService.h  messageService.cpp  messageService.h  sessionService.cpp  sessionService.h
