cmake_minimum_required(VERSION 3.10)
project(chatsever)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++20")
include_directories(${PROJECT_SOURCE_DIR}/ThirdParty/include)
include_directories(${PROJECT_SOURCE_DIR}/src)
include_directories(${PROJECT_SOURCE_DIR}/src/server)
include_directories(${PROJECT_SOURCE_DIR}/src/server/model)
link_directories(${PROJECT_SOURCE_DIR}/ThirdParty/lib)
add_subdirectory(src/server)
add_subdirectory(src/client)